@@ -1,3 +1,6 @@
+2013-04-22 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add description field to lightbox
+
 2013-04-19 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
 	* Remove isotope Sortby random => not compatibility with lightbox order
 	
